[package]
name = "ps-deflate"
version = "0.1.0-15"
edition = "2021"
description = "Object wrapper around libdeflater"
license = "GPL-3.0-or-later"

[dependencies]
libdeflater = "1.24.0"
ps-buffer = "0.1.0-20"
rayon = "1.10.0"
thiserror = "2.0.12"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
